@@ -28,19 +28,21 @@
 	    CoSMIC</a>, which is capable of describing the Assembly/Component
 	    using <a href="http://www.isis.vanderbilt.edu/Projects/gme/default.html">
 	    GME</a> as the development bed.
-	    The artifact generated from the CoSMIC is a set of XML descriptors.
+	    The artifacts generated from the CoSMIC are a set of XML descriptors.
          <li>
 	    A run-time infrastructure that performs the actual deployment and
 	    configuration, with a superset of the capabilities described in OMG
-	    D&C specification with CIAO extension. The implementation source code
+	    DnC specification with CIAO extension. The implementation source code
 	    could be fount in <a href="../../DnC"> this directory </a>.
-	    <br>
-	    In the new DnC run-time framework we have migrated all the functionalities
-	    presented in the old CIAO runtime except the Real-Time configuration and 
-	    Static-Configuration. Currently, the two CIAO runtime co-exist in our source 
-	    and the component implementation could be used with both framework without much 
-	    change. (For the change that one has to go through please read <a href ="./switch.html">
-	    here</a>.)
+	    <br><br>
+	    In the new DnC run-time framework we have migrated all the
+	    functionalities presented in the old CIAO runtime except the
+	    Real-Time configuration and Static Configuration, which are
+	    developed by Washington University in St. Louis. Currently,
+	    the two CIAO runtime co-exist in our source and the component
+	    implementation could be used with both framework without much
+	    cyhange. (For the change that one has to go through please
+	    read <a href="./switch.html">this</a>.)
 	  </ul>
       </ul>
 
@@ -416,15 +418,18 @@ certain release together.  All interfaces and types are under
       </ul>
       <p>
 
+  <li><b>CIAO 0.5 beta release</b> - (TAO 1.4.x, July 2004)
+      <ul>
+        <li>Usable version of CIAO with the new DnC implementation 
+	    tested on Linux and Win32.
+        <li>Simple examples of usage is available in
+        <code>$CIAO_ROOT/DnC/tests</code>
+      </ul>
+      <p>
+
 </ul>
 
-        <!--#include virtual="/~nanbor/signature.html" -->
-<!-- <hr> -->
-<!-- <address></address> -->
-<!-- <\!-- hhmts start -\-> -->
-<!-- Last modified: Sun Jun 1 23:20:37 Central Standard Time 2003 -->
-<!-- <\!-- hhmts end -\-> -->
-<!-- <address>Nanbor Wang &lt;nanbor@cs.wustl.edu&gt;</address> -->
+<b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
 </body> </html>
 
 <!--  LocalWords:  TODOs CCM IDL CCIDL CIDL backend idl
