@@ -10,13 +10,24 @@
 <ul>
   There are only one thing needs to be done to migrate the component
   implementation from the old runtime to the new runtime.
-
+  <br><br>
   Find all the component MPC files in your component implementation
   source directories and make the following changes.
 
+  for every project in your MPC files which inherites from any of
+  the following MPC template (base project): <code> ciao_client, ciao_component,
+  ciao_servant, ciao_server,</code> replace them with  <code> ciao_client_dnc,
+  ciao_component_dnc, ciao_servant_dnc, ciao_server_dnc</code>. Then
+  generate your makefile/solution/project files using either
+  <code>mwc.pl</code> or <code>mpc.pl</code> and build (rebuild) your
+  binaries.
 
 </ul>
 
-<h3>When switching from the new CIAO runtime to the old one</h1>
+<h3>When switching from the new CIAO runtime to the old one</h3>
+  <ul>
+    Reverse the above changes.
+  </ul>
 
+  <b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
 </body> </html>
