@@ -1,3 +1,10 @@
+Wed Jun 30 22:29:51 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* docs/releasenotes/switch.html:
+	* docs/releasenotes/index.html:
+          Updated the release note. I will work on the to-do list
+	  as well.
+
 Wed Jun 30 18:01:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
  	* CIDLC/ServantSourceGenerator.cpp:
